packages/core/src/forms/control/control.element.scss
// Copyright (c) 2016-2021 VMware, Inc. All Rights Reserved.
// This software is released under MIT license.
// The full license information can be found in LICENSE in the root directory of this project.

@import './../../styles/tokens/generated/index';

$fallback-width: calc(#{$cds-global-layout-space-xxl} * 2);

:host {
  contain: inherit;
  display: block;
  width: 100%;
  --control-width: #{$fallback-width};
}

:host([layout='compact']:not([control-width='shrink'])) .input-container {
  min-width: var(--control-width);
}

:host(:not([layout*='vertical']):not([control-width='shrink'])) .input-message-container {
  flex-basis: $fallback-width;
}

:host([layout='compact']:not([control-width='shrink'])) ::slotted(cds-control-message) {
  --max-width: #{$fallback-width};
}

:host([layout*='vertical']) cds-internal-control-label {
  --label-width: 100%;
}

.input-container {
  line-height: 0;
}

:host([_disabled]) ::slotted([slot='input']) {
  cursor: not-allowed;
}

:host([control-width='shrink']) {
  width: auto;
}

::slotted(input) {
  margin: 0 !important;
  width: 100%;
}

cds-control-action.status {
  height: $cds-global-space-7;
  padding-top: $cds-global-space-3;
}

:host([layout='horizontal']),
:host([layout='horizontal-inline']),
:host([layout='compact']) {
  cds-internal-control-label[action='primary'] {
    padding-top: $cds-global-space-5;
  }
}

:host([layout='compact']),
:host([layout='compact'][status='success']),
:host([layout='compact'][status='error']) {
  .messages {
    padding-top: $cds-global-space-5;
  }
}

